syntax = "proto3";

package ndid.telemetry.api;

option go_package = ".;ndid_telemetry_api";

option java_multiple_files = true;
option java_package = "ndid.grpc.telemetry";
option java_outer_classname = "NDIDTelemetryServiceProto";

service NDIDTelemetry {
  rpc SendRequestEvents(SendRequestEventsRequest) returns (Response) {}
  rpc SendSystemInformtation(SendSystemInformationRequest) returns (Response) {}
  rpc SendSystemLog(SendSystemLogRequest) returns (Response) {}
}

message Empty {}

message RequestMetadata {
  string node_id = 1;
  string token = 2;
}

message Response {
  uint64 code = 1;
  string message = 2;
}

message SendRequestEventsRequest {
  message RequestTimestamp {
    string request_id = 1;
    int32 state_code = 2;
    int64 source_timestamp = 3;
    string additional_data = 4;
  }

  RequestMetadata request_metadata = 1;
  repeated RequestTimestamp data = 2;
}

message SendSystemInformationRequest {
  message SystemInformation {
  }

  RequestMetadata request_metadata = 1;
  repeated SystemInformation data = 2;
}

message SendSystemLogRequest {
  message SystemLog {
    string log_level = 1;
    string detail = 2;
    int64 timestamp = 3;
  }

  RequestMetadata request_metadata = 1;
  repeated SystemLog data = 2;
}
